tests/Houtamelo.Spire.Analyzers.Tests/SPIRE005/cases/Detect_GenericOverload_DiscardAssignment.cs
//@ should_fail
// Ensure that SPIRE005 IS triggered when CreateInstance<EnforceInitializationStruct>() result is discarded.
public class Detect_GenericOverload_DiscardAssignment
{
    public void Method()
    {
        _ = Activator.CreateInstance<EnforceInitializationStruct>(); //~ ERROR
    }
}
